--- a/styleguide/css/stylesheet.css
+++ b/styleguide/css/stylesheet.css
@@ -996,21 +996,31 @@ h4 {
   grid-column-gap: 2%;
 }
 
-/*Login med email knap*/
+/*Login knap*/
 .btnsGridItem1 {
   grid-column: 1/2;
   grid-row: 1/2;
 }
 
-.btnLoginEmail {
+.loginbtn {
   grid-column: 1/2;
   grid-row: 2/3;
 }
 
-.emailIcon {
-  width: 30px;
-  margin-right: 10px;
-  vertical-align: middle;
+.loginwrapperbtn {
+  text-align: left;
+}
+
+.loginbtn {
+  display: inline-block;
+  background-color: #BB86FC;
+  border: 2px solid #BB86FC;
+  border-radius: 4px;
+  color: black;
+  padding: 15px 32px;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .wrapper-box-button1 {
@@ -1072,21 +1082,10 @@ h4 {
   font-weight: bold;
 }
 
-/*Login med telefon knap*/
+/*Side menu button*/
 .btnsGridItem2 {
   grid-column: 1/2;
   grid-row: 2/3;
-}
-
-.btnLoginNr {
-  grid-column: 1/2;
-  grid-row: 2/3;
-}
-
-.emailIcon2 {
-  width: 30px;
-  margin-right: 10px;
-  vertical-align: middle;
 }
 
 .wrapper-box-button2 {
@@ -1211,21 +1210,16 @@ h4 {
   font-family: "Roboto Mono", monospace;
 }
 
-/*OK*/
+/*Breadcrumbs*/
 .btnsGridItem4 {
   grid-column: 1/2;
   grid-row: 4/5;
 }
 
-.btnLoginNr {
-  grid-column: 1/2;
-  grid-row: 4/5;
-}
-
-.emailIcon4 {
-  width: 30px;
-  margin-right: 10px;
-  vertical-align: middle;
+.breadNsearch__newM {
+  display: block;
+  text-decoration: none;
+  color: #fff;
 }
 
 .wrapper-box-button4 {
@@ -1270,22 +1264,66 @@ h4 {
   font-family: "Roboto Mono", monospace;
 }
 
-/*Gem*/
+/*Dropdown menu button*/
 .btnsGridItem5 {
   grid-column: 1/2;
   grid-row: 5/6;
 }
 
-.btnLoginNr {
-  grid-column: 1/2;
-  grid-row: 5/6;
+.dropdown-check-list {
+  display: inline-block;
+}
+.anchor span {
+  border-bottom: 4px solid #fff;
+}
+.anchor span:hover {
+  color: #bb86fc;
+  border-bottom: 4px solid #bb86fc;
+  transition: 0.2s;
+}
+.dropdown-check-list .anchor {
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  padding: 5px 50px 5px 10px;
+  transition: 0.5s;
 }
 
-.emailIcon5 {
-  width: 30px;
-  margin-right: 10px;
-  vertical-align: middle;
+.dropdown-check-list ul.items {
+  padding: 2px;
+  display: none;
+  margin: 3% 0 0 0;
+  border-top: none;
 }
+
+.dropdown-check-list ul.items li {
+  list-style: none;
+  text-align: left;
+  transition: 0.2s;
+  font-size: 24px;
+}
+
+.dropdown-check-list.visible .items {
+  display: block;
+}
+.listItems {
+  padding-bottom: 35px;
+}
+.listItems a:hover {
+  color: #bb86fc;
+  transition: 0.2s;
+}
+li img {
+  float: left;
+  height: 250px;
+  margin: 1% 2% 0 10%;
+}
+.sideDropDots {
+  float: left;
+  height: 150px !important;
+  margin: 1% 2% 0 15%;
+}
+
 
 .wrapper-box-button5 {
   padding-bottom: 70px;
@@ -1388,21 +1426,10 @@ h4 {
   font-family: "Roboto Mono", monospace;
 }
 
-/*Book*/
+/*Logout*/
 .btnsGridItem7 {
   grid-column: 1/2;
   grid-row: 7/8;
-}
-
-.btnLoginNr {
-  grid-column: 1/2;
-  grid-row: 7/8;
-}
-
-.emailIcon7 {
-  width: 30px;
-  margin-right: 10px;
-  vertical-align: middle;
 }
 
 .wrapper-box-button7 {
@@ -1446,22 +1473,24 @@ h4 {
   padding: 2%;
   font-family: "Roboto Mono", monospace;
 }
-/*Annuller*/
+/*Guide buttons*/
 .btnsGridItem8 {
   grid-column: 1/2;
   grid-row: 8/9;
 }
 
-.btnLoginNr {
-  grid-column: 1/2;
-  grid-row: 8/9;
-}
-
-.emailIcon8 {
-  width: 30px;
-  margin-right: 10px;
-  vertical-align: middle;
-}
+.click { 
+  display: inline-block;
+    background-color: #bb86fc;
+    border: 2px solid #bb86fc;
+    border-radius: 4px;
+    color: black;
+    padding: 10px 28px;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+  }
 
 .wrapper-box-button8 {
   padding-bottom: 70px;
@@ -1505,21 +1534,22 @@ h4 {
   font-family: "Roboto Mono", monospace;
 }
 
-/*Meld afbud*/
+/*Reset button*/
 .btnsGridItem9 {
   grid-column: 1/2;
   grid-row: 9/10;
 }
 
-.btnLoginNr {
-  grid-column: 1/2;
-  grid-row: 9/10;
-}
+.progressBtnreset {
+  display: inline-block;
+  background-color: #292929 !important;
+  border: none !important;
+  color: #fff !important;
 
-.emailIcon9 {
-  width: 30px;
-  margin-right: 10px;
-  vertical-align: middle;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 .wrapper-box-button9 {
@@ -1575,13 +1605,48 @@ h4 {
   grid-row: 10/11;
 }
 
+.footerBtns {
+  display: block;
+  justify-content: space-around;
+  color: #fff;
+}
+  .footerBtns a {
+    display: flex;
+    padding: 2% 0 5% 0;
+  }
+ .footerBtns a:hover {
+    color: #BB86FC;
+    transition: 0.2s;
+  }
+
+.previoustext {
+  color: #fff;
+  margin-top: -1.9px;
+}  
+
 .emailIcon10 {
   width: 30px;
   margin-right: 10px;
   vertical-align: middle;
 }
 
-.farveboks10 {
+.wrapper-box-button10 {
+  padding-bottom: 70px;
+  grid-column: 2/3;
+  grid-row: 10/11;
+}
+
+.collapsible-button10 {
+  background-color: #bb86fc;
+  color: #ffff;
+  cursor: pointer;
+  padding: 1px 11px 1px 5px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 20px;
+
   grid-column: 2/3;
   grid-row: 10/11;
   background-color: #bb86fc;
@@ -1589,9 +1654,19 @@ h4 {
   position: relative;
 }
 
-.kodeboksen10 {
+.active,
+.collapsible-button10:hover {
+  background-color: #555;
+}
+
+.content-button10 {
+  padding: 0 18px;
+  overflow: hidden;
+  box-shadow: 0px 5px 10px -4px rgba(0, 0, 0, 0.8);
+
   grid-column: 2/3;
   grid-row: 10/11;
+  height: auto;
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
   padding: 2%;
   font-family: "Roboto Mono", monospace;
@@ -1629,22 +1704,27 @@ h4 {
   font-family: "Roboto Mono", monospace;
 }
 
-/*Book igen*/
+/*Page button*/
 .btnsGridItem12 {
   grid-column: 1/2;
   grid-row: 12/13;
 }
 
-.btnLoginNr {
-  grid-column: 1/2;
-  grid-row: 12/13;
+.searchGridpageBtn {
+  display: inline-block;
+  background-color: #292929;
+  border: 2px solid #03DAC5;
+  border-radius: 4px;
+  color: #fff;
+  padding: 15px 32px;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 600;
 }
 
-.emailIcon12 {
-  width: 30px;
-  margin-right: 10px;
-  vertical-align: middle;
-}
+.searchGridpageBtn img {
+    height: 12px;
+  }
 
 .farveboks12 {
   grid-column: 2/3;
